<resources>
    <string name="app_name">segar</string>
    <string name="menu_home">Home</string>
    <string name="menu_dict">Dict</string>
    <string name="menu_check">Check</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="vegetable_picture">Vegetable Picture</string>
    <string name="expandable_arrow">Expandable Arrow</string>
    <string name="error_icon">Error Icon</string>
    <string name="loading">Loading...</string>
    <string name="famili">Famili</string>
    <string name="makan">Consumeable Part</string>
    <string name="asal">Origin</string>
    <string name="lainnya">Other Information</string>
    <string name="app_logo">App Logo</string>
    <string name="splash_image">Splash Image</string>
    <string name="tagline">Tagline</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="join">Join At</string>
    <string name="faq">FAQ</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="check_Icon">Check Icon</string>
    <string name="camera_view">camera view</string>
    <string name="cameraFAB">camera FAB</string>
</resources>